rust/macros/tests/ui/fail/authority_observational_choice_with_check.stderr
error: Extension error: effect invocation `Runtime.watchPresence` is observational and may not be invoked with `check`
  --> tests/ui/fail/authority_observational_choice_with_check.rs:3:1
   |
 3 | / tell! {
 4 | |     effect Runtime
 5 | |       observe watchPresence : Session -> PresenceView
...  |
22 | |             Coordinator -> Worker : Abort
23 | | }
   | |_^
   |
   = note: this error originates in the macro `tell` (in Nightly builds, run with -Z macro-backtrace for more info)
